Multifile generators