@@ -6,7 +6,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.List;
 
 import org.easymock.EasyMock;
 import org.junit.jupiter.api.Test;
@@ -28,11 +28,13 @@ class TestGeneratorFactory1 implements GeneratorFactory {
 class TestGeneratorFactory2 implements GeneratorFactory {
     @Override
     public Generator createGenerator(BuildContext context) {
-        return (Path filePath, Collector collector) -> {
-            collector.addProvides(filePath.getFileName().toString());
-            collector.addProvides("prov2 = 1.2.3");
-            collector.addRequires("somereq");
-            collector.addRequires("anotherdep >= 42");
+        return (List<Path> filePaths, Collector collector) -> {
+            for (Path filePath : filePaths) {
+                collector.addProvides(filePath, filePath.getFileName().toString());
+                collector.addProvides(filePath, "prov2 = 1.2.3");
+                collector.addRequires(filePath, "somereq");
+                collector.addRequires(filePath, "anotherdep >= 42");
+            }
         };
     }
 }
@@ -46,11 +48,13 @@ abstract class AbstractTestGeneratorFactory implements GeneratorFactory {
 
     @Override
     public Generator createGenerator(BuildContext context) {
-        return (Path filePath, Collector collector) -> {
-            collector.addProvides("Prov" + id + "1");
-            collector.addProvides("Prov" + id + "2");
-            collector.addRequires("Req" + id + "1");
-            collector.addRequires("Req" + id + "2");
+        return (List<Path> filePaths, Collector collector) -> {
+            for (Path filePath : filePaths) {
+                collector.addProvides(filePath, "Prov" + id + "1");
+                collector.addProvides(filePath, "Prov" + id + "2");
+                collector.addRequires(filePath, "Req" + id + "1");
+                collector.addRequires(filePath, "Req" + id + "2");
+            }
         };
     }
 }
@@ -73,6 +77,20 @@ class TGFC extends AbstractTestGeneratorFactory {
     }
 }
 
+class TestGeneratorFactory3 implements GeneratorFactory {
+    @Override
+    public Generator createGenerator(BuildContext context) {
+        return (List<Path> filePaths, Collector collector) -> {
+            for (Path filePath : filePaths) {
+                collector.addProvides(filePath, "prov" + filePath.getFileName().toString().length());
+                if (filePath.toString().endsWith("3")) {
+                    collector.addRequires(filePath, "req");
+                }
+            }
+        };
+    }
+}
+
 public class CompoundGeneratorTest {
     @Test
     public void testCompoundGenerator() {
@@ -83,17 +101,18 @@ public class CompoundGeneratorTest {
         EasyMock.expect(bc.eval("%{?__xmvngen_requires_generators}")).andReturn(generators);
         EasyMock.expect(bc.eval("%{?__xmvngen_debug}")).andReturn("").anyTimes();
         EasyMock.expect(bc.eval("%{buildroot}")).andReturn("/build/root").anyTimes();
+        EasyMock.expect(bc.eval("%#")).andReturn("1").times(2);
         EasyMock.expect(bc.eval("%1")).andReturn("/build/root/some/file/one").times(2);
         Generator gen1 = EasyMock.createStrictMock(Generator.class);
         TestGeneratorFactory1.gen = gen1;
-        gen1.generate(EasyMock.eq(Paths.get("/build/root/some/file/one")), EasyMock.isA(Collector.class));
+        gen1.generate(EasyMock.eq(List.of(Path.of("/build/root/some/file/one"))), EasyMock.isA(Collector.class));
         EasyMock.expectLastCall();
         EasyMock.replay(bc, gen1);
         CompoundGenerator cg = new CompoundGenerator(bc);
         String prov = cg.runGenerator("provides");
-        assertEquals("one\nprov2 = 1.2.3", prov);
+        assertEquals("one\nprov2 = 1.2.3\n", prov);
         String req = cg.runGenerator("requires");
-        assertEquals("anotherdep >= 42\nsomereq", req);
+        assertEquals("anotherdep >= 42\nsomereq\n", req);
         EasyMock.verify(bc, gen1);
     }
 
@@ -138,7 +157,8 @@ public class CompoundGeneratorTest {
         EasyMock.expect(bc.eval("%{?__xmvngen_requires_generators}")).andReturn("");
         EasyMock.expect(bc.eval("%{?__xmvngen_debug}")).andReturn("").anyTimes();
         EasyMock.expect(bc.eval("%{buildroot}")).andReturn("/build/root").anyTimes();
-        EasyMock.expect(bc.eval("%1")).andReturn("/build/root/some/file/one").anyTimes();
+        EasyMock.expect(bc.eval("%#")).andReturn("1");
+        EasyMock.expect(bc.eval("%1")).andReturn("/build/root/some/file/one");
         EasyMock.expect(bc.eval("%{warn:xmvn-generator: no generators were specified}")).andReturn("");
         EasyMock.replay(bc);
         String prov = new CompoundGenerator(bc).runGenerator("provides");
@@ -155,13 +175,38 @@ public class CompoundGeneratorTest {
                 .andReturn(TGFB.class.getName() + " " + TGFC.class.getName());
         EasyMock.expect(bc.eval("%{?__xmvngen_debug}")).andReturn("").anyTimes();
         EasyMock.expect(bc.eval("%{buildroot}")).andReturn("/build/root").anyTimes();
+        EasyMock.expect(bc.eval("%#")).andReturn("1").times(2);
         EasyMock.expect(bc.eval("%1")).andReturn("/build/root/some/file/one").times(2);
         EasyMock.replay(bc);
         CompoundGenerator cg = new CompoundGenerator(bc);
         String prov = cg.runGenerator("provides");
-        assertEquals("ProvA1 ProvA2 ProvC1 ProvC2", prov.replace('\n', ' '));
+        assertEquals("ProvA1\nProvA2\nProvC1\nProvC2\n", prov);
         String req = cg.runGenerator("requires");
-        assertEquals("ReqB1 ReqB2 ReqC1 ReqC2", req.replace('\n', ' '));
+        assertEquals("ReqB1\nReqB2\nReqC1\nReqC2\n", req);
+        EasyMock.verify(bc);
+    }
+
+    @Test
+    public void testMultifile() throws Exception {
+        BuildContext bc = EasyMock.createMock(BuildContext.class);
+        EasyMock.expect(bc.eval("%{?__xmvngen_provides_generators}")).andReturn(TestGeneratorFactory3.class.getName());
+        EasyMock.expect(bc.eval("%{?__xmvngen_requires_generators}")).andReturn(TestGeneratorFactory3.class.getName());
+        EasyMock.expect(bc.eval("%{?__xmvngen_debug}")).andReturn("").anyTimes();
+        EasyMock.expect(bc.eval("%{buildroot}")).andReturn("/build/root").anyTimes();
+        EasyMock.expect(bc.eval("%#")).andReturn("5").times(2);
+        EasyMock.expect(bc.eval("%1")).andReturn("/build/root/f").times(2);
+        EasyMock.expect(bc.eval("%2")).andReturn("/build/root/f2").times(2);
+        EasyMock.expect(bc.eval("%3")).andReturn("/build/root/ff3").times(2);
+        EasyMock.expect(bc.eval("%4")).andReturn("/build/root/file").times(2);
+        EasyMock.expect(bc.eval("%5")).andReturn("/build/root/file5").times(2);
+        EasyMock.replay(bc);
+        CompoundGenerator cg = new CompoundGenerator(bc);
+        String prov = cg.runGenerator("provides");
+        assertEquals(
+                ";/build/root/f\nprov1\n;/build/root/f2\nprov2\n;/build/root/ff3\nprov3\n;/build/root/file\nprov4\n;/build/root/file5\nprov5\n",
+                prov);
+        String req = cg.runGenerator("requires");
+        assertEquals(";/build/root/ff3\nreq\n", req);
         EasyMock.verify(bc);
     }
 }
